...
                android:textColor="@color/light_gray"
                android:textSize="12sp"
                tools:text=""
                />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressDrawable="@drawable/custom_progressbar_color"
                tools:progress="50"
                />
...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.ibm.mil.readyapps.telco.views.RobotoTextView
                    android:id="@+id/bottom_left_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/light_gray"
                    android:textSize="12sp"
                    tools:text="58" />

...
