<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">

    <include layout="@layout/data_add_gb" />


    <include layout="@layout/data_header" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_left_margin"
        android:layout_marginStart="@dimen/layout_left_margin"
        android:layout_marginRight="@dimen/layout_right_margin"
        android:layout_marginEnd="@dimen/layout_right_margin"
        android:orientation="horizontal">

        <com.ibm.mil.readyapps.telco.views.TelcoUsageView
            android:id="@+id/cycle_viewer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:bottomLeftText=" "
            app:bottomRightText=" "
            app:image="@drawable/data_dark_gray"
            app:percentUsed="5" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_line_height"
        android:layout_marginLeft="@dimen/layout_left_margin"
        android:layout_marginStart="@dimen/layout_left_margin"
        android:layout_marginRight="@dimen/layout_right_margin"
        android:layout_marginEnd="@dimen/layout_right_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:background="@color/light_gray" />

</LinearLayout>